# fastapi_tutorial

./: README.md  basics.py  pyproject.toml
migrations/: env.py
migrations/versions/: 203b72e7b246_add_review_table.py  55ad6107ba27_update_password_field_to_password_hash.py  72d12ad0adc0_add_foreign_key_to_book.py  84eff5096bf8_add_user_roles.py  8a956a31c250_add_tags.py  ab3f2460cc85_init.py  c8b8ee48fe7a_fix_user.py
src/: __init__.py  celery_tasks.py  config.py  errors.py  mail.py  middleware.py
src/auth/: dependencies.py  routes.py  schemas.py  service.py  utils.py
src/books/: book_data.py  routes.py  schemas.py  service.py
src/db/: main.py  models.py  redis.py
src/reviews/: routes.py  schemas.py  service.py
src/tags/: routes.py  service.py
